--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -7,14 +6,15 @@
     <link rel="shortcut icon" href="./assets/img/logo restaurant.webp" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/css/style.css">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </head>
 <body>
-    <header class="bg-secondary text-white p-3 mb-4">
+    <header class="bg-secondary text-white p-3">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="./assets/img/logo restaurant.webp" alt="logo-perro" width="80px" class="d-inline-block align-text-top">
-                    Restobar Fran
+            <div class="container d-flex align-items-center">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img src="./assets/img/logo restaurant.webp" alt="logo-perro" width="80px" class="me-2">
+                    <span class="h1 mb-0">Restobar Fran</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
@@ -30,6 +30,7 @@
             </div>
         </nav>
     </header>
+    
 
     <main class="container">
         <section class="text-center mb-5">
@@ -79,6 +80,8 @@
             </a>
         </div>
     </footer>
+
     <script src="./js/main.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
