--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -11,20 +11,20 @@
 <body>
     <header class="bg-secondary text-white p-3">
         <nav class="navbar navbar-expand-lg navbar-dark">
-            <div class="container">
-                <a class="navbar-brand" href="#">
-                    <img src="../assets/img/logo restaurant.webp" alt="logo-perro" width="80px" class="d-inline-block align-text-top">
-                    Restobar Fran
+            <div class="container d-flex align-items-center">
+                <a class="navbar-brand d-flex align-items-center" href="#">
+                    <img src="../assets/img/logo restaurant.webp" alt="logo-perro" width="80px" class="me-2">
+                    <span class="h1 mb-0">Restobar Fran</span>
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
-                        <li class="nav-item"><a class="nav-link" href="../index.html">Inicio</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../pages/menu.html">Menú</a></li>
                         <li class="nav-item"><a class="nav-link" href="../pages/galeria.html">Galería</a></li>
                         <li class="nav-item"><a class="nav-link" href="../pages/nosotros.html">Nosotros</a></li>
-                        <li class="nav-item"><a class="nav-link active" href="../pages/contacto.html">Contacto</a></li>
+                        <li class="nav-item"><a class="nav-link" href="../pages/contacto.html">Contacto</a></li>
                     </ul>
                 </div>
             </div>
